--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 				and MERN stack proficiency with test automation, allows me to bridge the gap between web
 				development and quality assurance. I am a versatile professional who is eager to contribute my skills
 				and knowledge to deliver outstanding software solutions. </p>
-			<p>In my career, I have dedicated 3+ years to honing my skills in React.js. I have gained hands-on
+			<p>In my career, I have dedicated 3-4 years to honing my skills in React.js. I have gained hands-on
 				experience in developing dynamic and responsive
 				web applications, leveraging React's component-based architecture, state management, and integration
 				with backend APIs. I have also delved into the MERN stack, incorporating MongoDB, Express.js, and
 				Node.js into my projects.</p>
-			<p>In my career, I have also spent 3 years specializing in test automation using C#, Specflow, and Selenium. I
+			<p>In my career, I have also spent 2-3 years specializing in test automation using C#, Specflow, and Selenium.
+				I
 				have successfully automated test cases, designed robust frameworks, and executed comprehensive
 				regression and functional testing for various projects. My experience in this domain has allowed me to
 				become proficient in creating automated test scripts, maintaining test frameworks, and ensuring
@@ -120,24 +121,33 @@
 					well-versed in agile methodologies</li>
 				<li>Worked with Node.js and Express.js to build
 					server-side applications and APIs, MongoDB and mongoose for database management</li>
+				<li>Participated in code reviews and provided constructive feedback to maintain code quality and
+					adherence to best practices.</li>
 			</ul>
 			<hr />
 			<header>
 				<h4>Software Engineer - CitiusTech Healthcare</h4>
+				<!-- <h5>Software Engineer</h5>
+				<h5>Trainee Software Engineer</h5> -->
 				<p>July 2017 – November 2021</p>
 			</header>
 			<ul>
-				<li>Creating visually appealing, responsive, and high-performing user interfaces, with the help of
-					ReactJS and Material-UI </li>
+				<li>Developed and implemented user interfaces using React.js and Material-UI, creating visually
+					appealing and responsive web applications. </li>
+				<li>
+					Leveraged React's component-based architecture to build reusable and modular UI components, ensuring
+					code reusability and maintainability.
+				</li>
+				<li>Conducted unit testing of React components, using Jest and
+					React Testing Library, to ensure the reliability and stability of the applications.</li>
 				<li>Developed regression automated Test case in Selenium WebDriver using C# and SpecFlow in BDD
-					framework.
-					Helped Devops team to integrate the sanity test in CI-CD pipeline.</li>
-				<li>Worked on enhancing existing framework by adding WCF plugin validation, reading and storing Nested
-					JSON
-					data using Newtonsoft</li>
+					framework. Helped Devops team to integrate the sanity test in CI-CD pipeline.</li>
+				<li>Worked on enhancing existing framework by automating REST API validation and WCF plugin validation
+					using RestSharp and Newtonsoft Json.NET</li>
 				<li>Execution and failure analysis of existing Regression suite consisting of 900+ test cases including
 					reporting and
 					tracking of defects as encountered via automated scripts.</li>
+
 			</ul>
 			<p>
 
