--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 			<ul class="actions">
 				<li><a href="#contact" class="button primary">Get in Touch</a></li>
-				<li><a href="assets/Resume.pdf" class="button" target="_blank">View my Resume</a></li>
+				<li><a href="assets/Rishabh Sarkar.pdf" class="button" target="_blank">View my Resume</a></li>
 			</ul>
 		</section>
 
