changed resume to emphasize on MERn stack and updated about/expereince section

--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
 		<!-- About me -->
 		<section id="about">
 			<h1>About Me</h1>
-			<p>I bring 6 years of valuable IT experience, in software
-				development and test automation. My diverse skill set, combining React.js
-				and MERN stack proficiency with test automation, allows me to bridge the gap between web
-				development and quality assurance. I am a versatile professional who is eager to contribute my skills
-				and knowledge to deliver outstanding software solutions. </p>
-			<p>In my career, I have dedicated 3-4 years to honing my skills in React.js. I have gained hands-on
+			<p>With my 6+ years of valuable IT experience
+				specializing in the MERN stack, I bring a comprehensive understanding of full-stack development and the ability to seamlessly
+				integrate frontend and backend components. I am dedicated to delivering high-quality software solutions
+				that exceed expectations and drive business success.
+				
+				<!-- I bring 6 years of valuable IT experience,
+				specializing in software development with a strong focus on
+				the MERN stack. With a comprehensive skill set that includes React.js, Node.js, Express.js, Mongoose,
+				and MongoDB, I have successfully built dynamic and responsive web applications using the latest industry
+			best practices. -->
+			</p>
+			<p>In my career, I have gained hands-on
 				experience in developing dynamic and responsive
 				web applications, leveraging React's component-based architecture, state management, and integration
-				with backend APIs. I have also delved into the MERN stack, incorporating MongoDB, Express.js, and
-				Node.js into my projects.</p>
-			<p>In my career, I have also spent 2-3 years specializing in test automation using C#, Specflow, and Selenium.
-				I
-				have successfully automated test cases, designed robust frameworks, and executed comprehensive
-				regression and functional testing for various projects. My experience in this domain has allowed me to
-				become proficient in creating automated test scripts, maintaining test frameworks, and ensuring
-				high-quality software releases.</p>
-
+				with backend APIs. Additionally, I have gained hands-on experience with Node.js, Express.js, and
+				Mongoose, playing a vital
+				role in building server-side applications and RESTful APIs. I have successfully utilized Mongoose to
+				design data schemas, interact with MongoDB, and implement efficient data management solutions.</p>
+			
 			<ul class="actions">
 				<li><a href="#contact" class="button primary">Get in Touch</a></li>
 				<li><a href="assets/Rishabh Sarkar.pdf" class="button" target="_blank">View my Resume</a></li>
@@ -116,13 +118,16 @@
 					using ReactJS and Material UI.</li>
 				<li>Adept at utilizing React's component-based architecture, managing state
 					effectively, and integrating with various libraries and APIs. </li>
-				<li> Collaborated closely with cross-functional teams, including
-					product managers and QA engineers, to deliver high-quality software solutions. Also
-					well-versed in agile methodologies</li>
-				<li>Worked with Node.js and Express.js to build
-					server-side applications and APIs, MongoDB and mongoose for database management</li>
+				<li>Implement RESTful APIs and handle routing, middleware, and request/response handling in Node.js
+					and Express.js.</li>
+				<li>Define and create data schemas and models using Mongoose and MongoDB to enforce data structure and
+					validation.
+				</li>
 				<li>Participated in code reviews and provided constructive feedback to maintain code quality and
 					adherence to best practices.</li>
+				<li> Collaborated closely with cross-functional teams, including
+					product managers and QA engineers, to deliver high-quality software solutions. Also
+					well-versed in agile methodologies.</li>
 			</ul>
 			<hr />
 			<header>
@@ -136,10 +141,11 @@
 					appealing and responsive web applications. </li>
 				<li>
 					Leveraged React's component-based architecture to build reusable and modular UI components, ensuring
-					code reusability and maintainability.
+					code reusability and maintainability. Conducted unit testing of React components, using Jest and
+					React Testing Library.
 				</li>
-				<li>Conducted unit testing of React components, using Jest and
-					React Testing Library, to ensure the reliability and stability of the applications.</li>
+				<li>Worked with Node.js and Express.js to build server-side applications and APIs, MongoDB and
+					mongoose for database management.</li>
 				<li>Developed regression automated Test case in Selenium WebDriver using C# and SpecFlow in BDD
 					framework. Helped Devops team to integrate the sanity test in CI-CD pipeline.</li>
 				<li>Worked on enhancing existing framework by automating REST API validation and WCF plugin validation
